<?xml version="1.0" encoding="UTF-8"?>

    <android.support.design.widget.CoordinatorLayout
    tools:context="project.richard.richpay.ResetPasswordActivity"
    android:fitsSystemWindows="true"
    android:background="@drawable/darkfade"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    -<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="30dp">

    <ImageView android:layout_gravity="center_horizontal" android:layout_height="@dimen/logo_w_h" android:layout_width="@dimen/logo_w_h" android:src="@drawable/whitelogorpay" android:layout_marginBottom="10dp"/>

    <TextView android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="10dp" android:textSize="20dp" android:textColor="@android:color/white" android:text="@string/lbl_forgot_password"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/activity_horizontal_margin" android:gravity="center_horizontal" android:layout_marginBottom="10dp" android:textSize="14dp" android:textColor="@android:color/white" android:text="@string/forgot_password_msg"/>



    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginTop="20dp" android:layout_marginBottom="10dp" android:textColor="@android:color/white" android:textColorHint="@android:color/white" android:inputType="textEmailAddress" android:hint="@string/hint_email" android:id="@+id/email"/>



    <!-- Login Button -->


    <Button android:background="@color/colorAccent" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="20dip" android:textColor="@android:color/black" android:text="@string/btn_reset_password" android:id="@+id/btn_reset_password"/>

    <Button android:background="@null" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginTop="10dp" android:textColor="@color/colorAccent" android:text="@string/btn_back" android:id="@+id/btn_back"/>

</LinearLayout>

    <ProgressBar android:layout_gravity="center|bottom" android:layout_height="30dp" android:layout_width="30dp" android:layout_marginBottom="20dp" android:id="@+id/progressBar" android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>
