<?xml version="1.0" encoding="UTF-8"?>

    <android.support.design.widget.CoordinatorLayout tools:context="project.richard.richpay.RegisterActivity" android:fitsSystemWindows="true" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">


    -<LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:padding="@dimen/activity_horizontal_margin" android:orientation="vertical" android:gravity="center" android:background="@drawable/fadebackground">

    <ImageView android:layout_height="150dp" android:layout_width="200dp" android:src="@drawable/r_paylogo" android:layout_marginBottom="30dp" android:layout_gravity="center_horizontal"/>


    -<android.support.design.widget.TextInputLayout android:layout_height="wrap_content" android:layout_width="match_parent">

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:textColor="@android:color/white" android:singleLine="true" android:maxLines="1" android:inputType="textEmailAddress" android:hint="@string/email" android:id="@+id/email"/>

</android.support.design.widget.TextInputLayout>


    -<android.support.design.widget.TextInputLayout android:layout_height="wrap_content" android:layout_width="match_parent">

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:textColor="@android:color/white" android:singleLine="true" android:maxLines="1" android:inputType="textPassword" android:hint="@string/hint_password" android:id="@+id/password" android:imeOptions="actionUnspecified"  android:focusableInTouchMode="true" />

</android.support.design.widget.TextInputLayout>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:background="@color/colorAccent" android:textColor="@android:color/black" android:id="@+id/sign_up_button" android:textStyle="bold" android:text="@string/action_sign_in_short" android:layout_marginTop="16dp" style="?android:textAppearanceSmall"/>

    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:background="@null" android:textColor="@color/colorAccent" android:id="@+id/btn_reset_password" android:text="@string/btn_forgot_password" android:layout_marginTop="20dip" android:textAllCaps="false"/>

    <!-- Link to Login Screen -->


    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:background="@null" android:textColor="@color/white" android:id="@+id/sign_in_button" android:text="@string/btn_link_to_login" android:layout_marginTop="20dip" android:textAllCaps="false" android:textSize="15dp"/>

</LinearLayout>

    <ProgressBar android:layout_height="30dp" android:layout_width="30dp" android:layout_marginBottom="20dp" android:layout_gravity="center|bottom" android:id="@+id/progressBar" android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>
